--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Livros</string>
+    <string name="login">Login</string>
+    <string name="senha">Senha</string>
+    <string name="login_no_app">Livros E-commerce</string>
 </resources>
